[tool.poetry]
name = "reach-api"
version = "0.1.0"
description = ""
authors = ["lijian418"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
motor = "^3.1.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
