[tool.poetry]
name = "reach-api"
version = "0.1.0"
description = ""
authors = ["lijian418"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
motor = "^3.1.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^1.0.0"
unicode = "^2.9"
six = "^1.16.0"
aio-pika = "^9.0.4"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
